--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <!-- Bottom-right form -->
           <div class="form-wrap">
             <aside class="card" aria-label="Join the mailing list form">
-              <h2>Join the mailing list</h2>
+              <h2>Join the club and mailing list</h2>
 
               <!-- Google Apps Script Web App endpoint (Option B) -->
               <form class="custom-form" method="POST" action="PASTE_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE">
@@ -361,7 +361,7 @@
                 <input name="last" type="text" placeholder="Last Name" required />
                 <input name="email" type="email" placeholder="Email Address" required />
 
-                <button type="submit">SUBMIT</button>
+                <button type="submit">JOIN THE CLUB FOR FREE</button>
               </form>
 
               <p class="note">No spam. Leave anytime.</p>
