--- a/index.html
+++ b/index.html
@@ -343,14 +343,14 @@
               TAKE ME TO THIS MONTH'S FREEBIES →
             </a>
 
-            <p class="subline">Join the club for other free offers.</p>
+            <p class="subline">Join the club and mailing list for other free offers.</p>
             <div class="arrow-down">↓</div>
           </div>
 
           <!-- Bottom-right form -->
           <div class="form-wrap">
             <aside class="card" aria-label="Join the mailing list form">
-              <h2>Join the club and mailing list</h2>
+              <h2>Free Books Every Month</h2>
 
               <!-- Google Apps Script Web App endpoint (Option B) -->
               <form class="custom-form" method="POST" action="PASTE_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE">
@@ -361,7 +361,7 @@
                 <input name="last" type="text" placeholder="Last Name" required />
                 <input name="email" type="email" placeholder="Email Address" required />
 
-                <button type="submit">JOIN THE CLUB FOR FREE</button>
+                <button type="submit">Join the Club</button>
               </form>
 
               <p class="note">No spam. Leave anytime.</p>
