--- a/index.html
+++ b/index.html
@@ -343,9 +343,10 @@
               TAKE ME TO THIS MONTH'S FREEBIES →
             </a>
 
-            <p class="subline">Join the club and mailing list for other free offers.</p>
-            <div class="arrow-down">↓</div>
-          </div>
+           <p class="subline with-arrow">
+  Join the club and mailing list for other free offers.
+  <span class="arrow-down">↓</span>
+</p>
 
           <!-- Bottom-right form -->
           <div class="form-wrap">
