--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <!-- Bottom-right form -->
           <div class="form-wrap">
             <aside class="card" aria-label="Join the mailing list form">
-              <h2>Free Books Every Month</h2>
+              <h2>Free Offers Every Month</h2>
 
               <!-- Google Apps Script Web App endpoint (Option B) -->
               <form class="custom-form" method="POST" action="PASTE_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE">
