--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
         <p class="social-line">CLICK ICON TO FOLLOW FOR WEEKLY DEALS:</p>
 
         <div class="icons">
-          <a class="icon-btn ig" href="https://www.instagram.com/pageturnerbc/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <a class="icon-btn ig" href="https://www.instagram.com/pageturnerbc/?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/>
             </svg>
           </a>
 
-          <a class="icon-btn fb" href="https://www.facebook.com/PageTurnerBookClub" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <a class="icon-btn fb" href="https://www.facebook.com/PageTurnerBookClub?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.6c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12H17l-.4 3h-2.6v7A10 10 0 0 0 22 12z"/>
             </svg>
