--- a/index.html
+++ b/index.html
@@ -360,6 +360,18 @@
 
                 <input name="first" type="text" placeholder="First Name" required />
                 <input name="last" type="text" placeholder="Last Name" required />
+                <select name="country" required>
+  <option value="" disabled selected>Country</option>
+  <option value="United States">United States</option>
+  <option value="Canada">Canada</option>
+  <option value="United Kingdom">United Kingdom</option>
+  <option value="Australia">Australia</option>
+  <option value="New Zealand">New Zealand</option>
+  <option value="Ireland">Ireland</option>
+  <option value="South Africa">South Africa</option>
+  <option value="Other">Other</option>
+</select>
+
                 <input name="email" type="email" placeholder="Email Address" required />
 
                 <button type="submit">Join the Club</button>
